# jump-models

./: .gitignore  README.md  environment.yaml  pyproject.toml
examples/nasdaq/: data.csv  example.ipynb  example.py  feature.py  get_data.py  plot.py  test.ipynb  utils_dir.py
examples/nasdaq/data/: NDX.csv  NDX.pkl
jumpmodels/: __init__.py  base.py  feature.py  jump.py  plot.py  preprocess.py  sparse_jump.py
jumpmodels/utils/: __init__.py  calculation.py  cluster.py  index.py  validation.py
notebooks/nasdaq_example/: data.pkl  get_data.py
